# stashapi

./: .git-blame-ignore-revs  .gitignore  README.md  classes.py  gql_fragments.py  interface.py  log.py  marker_parse.py  pyproject.toml  scrape_parser.py  stash_models.py  stash_types.py  stashapp.py  stashapp_gql_fragments.py  stashbox.py  stashbox_gql_fragments.py  tools.py  types.py
.github/workflows/: publish.yaml  pypi_test.yml
gql_fragments/: stashapp.py
src/stashapi/: classes.py  gql_types.py  log.py  marker_parse.py  scrape_parser.py  stash_types.py  stashapp.py  stashbox.py  tools.py
tests/: test_log.py
