[project]
name = "stashapi"
version = "0.1.0"
description = "API for working with a [Stash](https://github.com/stashapp/stash) instance"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = ["requests>=2.32.3"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
# todo: add urls

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["hatch>=1.14.0", "pytest>=8.3.4"]

[tool.black]
line-length = 120

[tool.coverage.run]
source = ["stashapi"]


[tool.pyright]
verboseOutput = true
include = ["src"]
exclude = ["**/__pycache__", "**/*.egg-info"]

pythonVersion = "3.12"

executionEnvironments = [
    { root = "src/" },
    { root = "tests/", extraPaths = [
        "src/",
    ] },
]

[tool.tox]
env_list = ["format-check", "py312"]

[tool.tox.env.format]
description = "install black in a virtual environment and invoke it on the current folder"
deps = ["black==24.10.0"]
skip_install = true
commands = [["black", "src"]]

[tool.tox.env.format-check]
description = "install black in a virtual environment and invoke it in check mode on the current folder. Fails if changes would have been made"
deps = ["black==24.10.0"]
skip_install = true
commands = [["black", "src", "--check", "--diff", "--color"]]

[tool.tox.env."py312"]
description = "install pytest in a virtual environment and invoke it on the tests folder"
deps = ["pytest>=8", "pytest-cov"]
commands = [
    [
        "pytest",
        "--cov",
        "--cov-report",
        "html",
        "--cov-report",
        "term",
        "tests",
        "--capture=tee-sys",
        "-r",
        "fExXpPw",
        "--showlocals",
        { replace = "posargs", extend = true },
    ],
]
