[project]
authors = [
    { name = "stg-annon", email = "14135675+stg-annon@users.noreply.github.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["requests>=2.32.3", "typing-extensions>=4.12.2"]
description = "API wrapper and tools for interfacing with a [Stash](https://github.com/stashapp/stash) instance"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
name = "stashapi"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/stg-annon/stashapi"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["hatch>=1.14.0", "pytest>=8.3.4"]

[tool.black]
line-length = 120

[tool.coverage.run]
source = ["stashapi"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.pyright]
verboseOutput = true
include = ["src"]
exclude = ["**/__pycache__", "**/*.egg-info"]
allowedUntypedLibraries = ["requests"]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false

pythonVersion = "3.12"

executionEnvironments = [
    { root = "src/" },
    { root = "tests/", extraPaths = [
        "src/",
    ] },
]

[tool.tox]
env_list = ["format-check", "py311", "py312", "py313"]

[tool.tox.env.format]
description = "install black in a virtual environment and invoke it on the current folder"
deps = ["black==24.10.0"]
skip_install = true
commands = [["black", "src"]]

[tool.tox.env.format-check]
description = "install black in a virtual environment and invoke it in check mode on the current folder. Fails if changes would have been made"
deps = ["black==24.10.0"]
skip_install = true
commands = [["black", "src", "--check", "--diff", "--color"]]

[tool.tox.env_run_base]
deps = ["pytest>=8", "pytest-cov"]
commands = [
    [
        "pytest",
        "--cov",
        "--cov-report",
        "html",
        "--cov-report",
        "term",
        "tests",
        "--capture=tee-sys",
        "-r",
        "fExXpPw",
        "--showlocals",
        { replace = "posargs", extend = true },
    ],
]

[tool.tox.env."py311"]
description = "Run tests on Python version 3.11"

[tool.tox.env."py312"]
description = "Run tests on Python version 3.12"

[tool.tox.env."py313"]
description = "Run tests on Python version 3.13"
